[project]
name = "water-treatment-code-kata"
version = "2025.4.3"
description = "Water treatment domain code kata!"
requires-python = ">= 3.10"
readme = {file = "README.txt", content-type = "text/markdown"}

authors = [
  {name = "Lucas Rocha", email = "Lucas.RochaDeOliveira@waterleau.com"},
  {name = "Maria Rico", email = "maria.morillo@waterleau.com"},
]

maintainers = [
  {name = "Lucas Rocha", email = "Lucas.RochaDeOliveira@waterleau.com"},
  {name = "Maria Rico", email = "maria.morillo@waterleau.com"},
]
